--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       margin-top: 10px;
       user-select: none;
     }
-    #reset-btn, #update-btn, #download-btn {
+    #reset-btn, #update-btn {
       margin-top: 8px;
       width: 100%;
       padding: 7px;
@@ -183,10 +183,6 @@
       width: 160px;
       text-align: center;
     }
-    /* Zorg dat layers control onder zoomknoppen staat */
-    .leaflet-control-layers {
-      margin-top: 50px !important;
-    }
   </style>
   <title>Locatievinder Fitness Center</title>
 </head>
@@ -220,7 +216,6 @@
     <div id="info-text">De suitability index is het resultaat van de MCA waarbij verschillende wegingen kunnen worden toegepast.</div>
   </button>
   <button id="reset-btn" type="button">Reset</button>
-  <button id="download-btn" type="button">Download GeoJSON</button>
   <button id="close-menu-btn" type="button" style="margin-top: 10px;">Sluit menu</button>
 </div>
 
@@ -256,9 +251,9 @@
 
   function getCenterCoords() {
     if (window.innerWidth <= 768) {
-      return [52.10, 5.10];
+      return [52.10, 5.10];  // mobiel iets westelijker
     } else {
-      return [52.09, 5.42];
+      return [52.09, 5.42];  // desktop
     }
   }
 
@@ -274,29 +269,15 @@
     zoomSnap: 0.5,
     zoomDelta: 0.5
   }).setView(getCenterCoords(), 12);
-
+  
   map.setZoom(map.getZoom() - 0.5);
-
-  // Voeg zoom en schaal toe
+  
   L.control.zoom({ position: 'topright' }).addTo(map);
   L.control.scale({ position: 'bottomright' }).addTo(map);
 
-  // Basiskaart laag (OpenStreetMap)
-  const osmLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '&copy; OpenStreetMap contributors'
   }).addTo(map);
-
-  // Satelliet laag (Esri WorldImagery)
-  const satelliteLayer = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-    attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
-  });
-
-  // Layer control toevoegen net onder zoomknoppen
-  const baseLayers = {
-    "Kaart": osmLayer,
-    "Satelliet": satelliteLayer
-  };
-  L.control.layers(baseLayers, null, {position: 'topright', collapsed: false}).addTo(map);
 
   function getColor(score) {
     return score > 6 ? '#1a9641' :
@@ -337,7 +318,6 @@
   fetch('data/gridlayer_mca_fitness.geojson')
     .then(res => res.json())
     .then(data => {
-      console.log('Eerste feature properties:', data.features[0].properties);
       layer_group = L.geoJSON(data, {
         style: styleFeature,
         onEachFeature: popFeature
@@ -353,111 +333,106 @@
     let w_fit = parseFloat(document.getElementById('weight-fitness').value) || 0;
     let w_pop = parseFloat(document.getElementById('weight-pop').value) || 0;
 
+    // Automatische normalisatie:
     const sum = w_ov + w_fit + w_pop;
-    if (sum === 0) {
-      alert("De som van de gewichten mag niet nul zijn.");
-      return;
+    if (sum > 0) {
+      w_ov /= sum;
+      w_fit /= sum;
+      w_pop /= sum;
+    } else {
+      // voorkom delen door nul, zet default waarden
+      w_ov = 0.2; w_fit = 0.3; w_pop = 0.5;
     }
 
+    // Update sliders naar genormaliseerde waarden en percentages
+    document.getElementById('weight-ov').value = w_ov.toFixed(3);
+    document.getElementById('percent-ov').textContent = Math.round(w_ov * 100) + '%';
+
+    document.getElementById('weight-fitness').value = w_fit.toFixed(3);
+    document.getElementById('percent-fitness').textContent = Math.round(w_fit * 100) + '%';
+
+    document.getElementById('weight-pop').value = w_pop.toFixed(3);
+    document.getElementById('percent-pop').textContent = Math.round(w_pop * 100) + '%';
+
     layer_group.eachLayer(layer => {
-      const f = layer.feature;
-      const ov = f.properties.OV_reachability || 0;
-      const fit = f.properties.Fitness_gyms || 0;
-      const pop = f.properties.Pop_density || 0;
+      const p = layer.feature.properties;
+      const ov = parseFloat(p.score_bus) || 0;
+      const fit = parseFloat(p.score_fit) || 0;
+      const pop = parseFloat(p.score_pop) || 0;
+      p.MCA_score = w_ov * ov + w_fit * fit + w_pop * pop;
 
-      const score = (ov * w_ov + fit * w_fit + pop * w_pop) / sum;
-
-      f.properties.MCA_score = score;
-      layer.setStyle(styleFeature(f));
-      layer.getPopup().setContent('Suitability index: ' + score.toFixed(2));
+      layer.setStyle(styleFeature(layer.feature));
+      layer.bindPopup('Suitability index: ' + p.MCA_score.toFixed(2));
     });
   }
 
-  // Eventlisteners voor sliders
-  document.getElementById('weight-fitness').addEventListener('input', e => {
-    document.getElementById('percent-fitness').textContent = Math.round(e.target.value * 100) + '%';
-  });
-  document.getElementById('weight-ov').addEventListener('input', e => {
-    document.getElementById('percent-ov').textContent = Math.round(e.target.value * 100) + '%';
-  });
-  document.getElementById('weight-pop').addEventListener('input', e => {
-    document.getElementById('percent-pop').textContent = Math.round(e.target.value * 100) + '%';
-  });
+  // Update percentage tekst bij slider beweging
+  function updatePercentDisplay(idRange, idPercent) {
+    const range = document.getElementById(idRange);
+    const percent = document.getElementById(idPercent);
+    range.addEventListener('input', () => {
+      percent.textContent = Math.round(parseFloat(range.value) * 100) + '%';
+    });
+  }
+  updatePercentDisplay('weight-fitness', 'percent-fitness');
+  updatePercentDisplay('weight-ov', 'percent-ov');
+  updatePercentDisplay('weight-pop', 'percent-pop');
+  updatePercentDisplay('transparency-slider', 'percent-transparency');
+
+  // Transparantie slider
   document.getElementById('transparency-slider').addEventListener('input', e => {
     currentTransparency = parseFloat(e.target.value);
     document.getElementById('percent-transparency').textContent = Math.round(currentTransparency * 100) + '%';
     if (layer_group) {
-      layer_group.setStyle({fillOpacity: currentTransparency});
+      layer_group.setStyle(layer => ({
+        ...styleFeature(layer.feature)
+      }));
     }
   });
 
+  // Knoppen
   document.getElementById('update-btn').addEventListener('click', () => {
     updateScores();
   });
 
   document.getElementById('reset-btn').addEventListener('click', () => {
-    document.getElementById('weight-fitness').value = 0.30;
+    document.getElementById('weight-fitness').value = 0.3;
+    document.getElementById('weight-ov').value = 0.2;
+    document.getElementById('weight-pop').value = 0.5;
+    document.getElementById('transparency-slider').value = 0.7;
+
     document.getElementById('percent-fitness').textContent = '30%';
-    document.getElementById('weight-ov').value = 0.20;
     document.getElementById('percent-ov').textContent = '20%';
-    document.getElementById('weight-pop').value = 0.50;
     document.getElementById('percent-pop').textContent = '50%';
-    document.getElementById('transparency-slider').value = 0.5;
-    document.getElementById('percent-transparency').textContent = '50%';
-    currentTransparency = 0.5;
-    updateScores();
+    document.getElementById('percent-transparency').textContent = '70%';
+
+    currentTransparency = 0.7;
     if (layer_group) {
-      layer_group.setStyle({fillOpacity: currentTransparency});
+      layer_group.setStyle(layer => ({
+        ...styleFeature(layer.feature)
+      }));
     }
+    updateScores();
   });
 
-  document.getElementById('download-btn').addEventListener('click', () => {
-    if (!layer_group) {
-      alert("Geen data om te downloaden.");
-      return;
-    }
-    const geojson = layer_group.toGeoJSON();
-    const filename = 'fitness_suitability.geojson';
-    const blob = new Blob([JSON.stringify(geojson, null, 2)], {type: 'application/json'});
-    const url = URL.createObjectURL(blob);
-
-    const a = document.createElement('a');
-    a.href = url;
-    a.download = filename;
-    document.body.appendChild(a);
-    a.click();
-    a.remove();
-    URL.revokeObjectURL(url);
-  });
-
-  // Menu toggle
   const controlBox = document.getElementById('control-box');
   const toggleMenuBtn = document.getElementById('toggle-menu-btn');
   const closeMenuBtn = document.getElementById('close-menu-btn');
 
-  function updateMenuVisibility() {
-    if (window.innerWidth <= 768) {
-      controlBox.style.display = 'none';
-      toggleMenuBtn.style.display = 'block';
-    } else {
-      controlBox.style.display = 'flex';
-      toggleMenuBtn.style.display = 'none';
-    }
-  }
-  updateMenuVisibility();
-
-  window.addEventListener('resize', updateMenuVisibility);
-
-  toggleMenuBtn.addEventListener('click', () => {
-    controlBox.style.display = 'flex';
-    toggleMenuBtn.style.display = 'none';
-  });
   closeMenuBtn.addEventListener('click', () => {
     controlBox.style.display = 'none';
     toggleMenuBtn.style.display = 'block';
   });
 
-</script>
+  toggleMenuBtn.addEventListener('click', () => {
+    controlBox.style.display = 'flex';
+    toggleMenuBtn.style.display = 'none';
+  });
 
+  // Start met menu zichtbaar
+  controlBox.style.display = 'flex';
+  toggleMenuBtn.style.display = 'none';
+
+</script>
 </body>
 </html>
